[fix] Added setTooltipVisibility
Switched to CSS approach to avoid overwriting media queries
which can be problematic to restore to original settings.

--- a/src/css/netjsongraph.css
+++ b/src/css/netjsongraph.css
@@ -319,6 +319,10 @@
   user-select: text !important;
 }
 
+.njg-container.njg-hide-tooltip .njg-tooltip {
+  display: none !important;
+}
+
 .njg-container .njg-tooltip .njg-closeButton {
   display: none;
 }
